removed header and footer for FAQ'S page

--- a/frontend/faqs/FAQS.css
+++ b/frontend/faqs/FAQS.css
@@ -1,709 +1,425 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
  
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
-html {
-  font-size: 18px;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+/*MAIN STARTS HERE*/
+.design {
   width: 100%;
-  font-family: "Open Sans", sans-serif;
-  min-height: 100vh;
-  padding: 0;
+  height: 300px;
+  background-color: rgba(0, 62, 83, 1);
+  background-image: url(image/contact-us-banner.png);
+  background-size: cover;
+  z-index: 1;
+  border-radius: 0 0 11% 11%;
   text-align: center;
 }
-
-/* ###---HEADER START---### */
-
-header {
-  align-items: center;
-  border-bottom: 1px solid gray;
-  padding: 1.25rem 0;
+.design h1 {
+  width: 100%;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 37px;
+  color: white;
 }
-
-header,
-.desktop_nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-header .company-logo {
-  font-size: 1.25rem;
-  letter-spacing: 0.05rem;
-  text-align: left;
-}
-
-header a,
-header button {
+.design input {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 50px;
   border: none;
-  color: black;
+  border-radius: 15px;
+  font-size: 24px;
+}
+.questions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  width: 100%;
+  height: auto;
+  gap: 20px;
+}
+.questions .drops {
+  width: 700px;
+  height: 40px;
+  border-bottom: 1px solid rgba(130, 130, 130, 1);
+  text-align: left;
+  font-size: 30px;
+  padding: 0 30px 0 0;
+}
+.questions .drops img {
+  width: 20px;
+  height: 10px;
+  position: relative;
+}
+.illustrate {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
-  font-weight: 600;
-  height: 2rem;
-  padding: 0 1rem;
+  margin-top: 50px;
+}
+.help {
+  width: 100%;
+  height: 70px;
+  background-color: #003e53;
   text-align: center;
-  text-decoration: none;
+  color: white;
+  padding: 10px 0;
 }
-
-header a:hover {
-  border-radius: 0;
-  border-bottom: 2px solid #003e53;
-}
-
- 
-.company-logo {
-  color: #00bbf9;
-  font-size:36px;
-  font-weight: 600;
-  letter-spacing: 0.2rem;
-}
-
-.desktop_nav {
-  display: none;
-}
-
-.mobile_nav {
-  display: flex;
+.search {
+  width: 100%;
+  height: auto;
+  margin-top: 30px;
+  margin-left: 25%;
   
 }
-
-.nav_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #003e53;
-  border-radius: 10px;
-  height: 60vh;
-  padding: 2rem 1.5rem;
-  width: 80vw;
-  position: absolute;
-  top: 4.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: 0.7s ease-out;
-  z-index: 3;
+.search input {
+  width: 500px;
+  height: 50px;
+  border-radius: 8px;
+  border: 1px solid;
 }
-
-.nav_card a,
-.nav_card button {
-  background-color: transparent;
+.search button {
+  width: 130px;
+  height: 56px;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  background-color: #003e53;
   color: white;
 }
-
-.nav_card.hide {
-  left: -100vw;
+.grid-container {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 523px 523px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  column-gap: 80px;
+  row-gap: 80px;
+}
+.grid-item {
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  width: 400px;
+  height: 240px;
+  background-color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32.68px;
+  text-align: center;
 }
 
-.menu_btn {
-  cursor: pointer;
-  font-size: 1.25rem;
+#grid-item {
+  width: auto;
+  margin-bottom: 70px;
+  background-color: white;
+  border: none;
+  box-shadow: none;
 }
+#grid-item4 {
+  background-color: #003e53;
+  color: white;
+}
+.grid-item input {
+  width: 300px;
+  height: 170px;
+  border-radius: 8px;
+}
+.grid-item h1 {
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 49.03px;
+}
+#form3 button {
+  margin-left: 24rem;
+  width: 200px;
+  height: 64px;
+  border: none;
+  border-radius: 8px;
+  font-size: 24px;
+  font-weight: 400;
+  background-color: #003e53;
+  color: white;
+}
+/*MAIN ENDS HERE*/
+.zuri-team {
+  text-align: center;
+  margin-top: 80px;
+  font-size: 56px;
+  font-weight: 600;
+  color: #00bbf9;
+}
+ 
 
-.menu_btn:hover {
-  color: #003e53;
-}
+/* ###---RESPONSIVE STYLING FOR HEADER AND FOOTER START---### */
+@media screen and (max-width: 1440px) {
+  .design {
+    width: 100%;
+  }
 
-/* ###---HEADER END---### */
-
-/*MAIN STARTS HERE*/
-.design{
+  .questions {
     width: 100%;
-    height: 300px;
-    background-color: rgba(0, 62, 83, 1);
-    background-image: url(image/contact-us-banner.png);
-    background-size: cover;
-    z-index: 1;
-    border-radius: 0 0 11% 11%;
-    text-align: center;
-}
-.design h1{
+  }
+  .help {
     width: 100%;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 37px;
-    color: white;
-}
-.design input{
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    height: 50px;
-    border: none;
-    border-radius: 15px;
-    font-size: 24px;
-}
-.questions{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+  }
+  .grid-container {
     width: 100%;
-    height: auto;
-    gap: 20px;
-}
-.questions .drops{
-width: 700px;
-height: 40px;
-border-bottom: 1px solid rgba(130, 130, 130, 1);
-text-align: left;
-font-size: 30px;
- padding: 0 30px 0 0;
-}
- .questions .drops img{
-    width: 20px;
-    height: 10px;
-    position: relative;
-     
-     
-     
- }
- .illustrate{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
- }
- .help{
-    width:100%;
-    height: 70px;
-    background-color:   #003e53;
-    text-align: center;
-    color: white;
-    padding: 10px 0;
- }
- .search{
-    width: 100%;
-    height: auto;
-    margin-top: 30px;
- }
- .search input{
-    width: 500px;
-    height: 50px;
- }
- .search button{
-    width: 130px;
-    height: 56px;
-    border: none;
-    border-radius: 8px;
-    font-size: 14px;
-    background-color:  #003e53;
-    color: white;
- }
- .grid-container{
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns:523px 523px;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    column-gap: 80px;
-    row-gap: 80px;
-
- }
- .grid-item{
-    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    width: 400px;
-    height: 240px;
-    background-color: white;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 32.68px;
- }
-  
- #grid-item{
+    grid-template-columns: 400px 400px;
+  }
+  #grid-item {
     width: auto;
     background-color: white;
     border: none;
-    box-shadow:none;
- }
- #grid-item4{
-    background-color: #003e53;
-    color: white;
- }
- .grid-item input{
-    width: 300px;
-    height: 170px;
-    border-radius: 8px;
- }
- .grid-item h1{
-    font-size: 30px;
-    font-weight: 600;
-    line-height: 49.03px;
- }
- .grid-container button{
-   margin-left: 12rem;
-   margin-bottom: 70px;
-    width: 200px;
-    height: 64px;
-    border: none;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: 400;
-    background-color:  #003e53;
-    color: white;
-     
- }
- /*MAIN ENDS HERE*/
- .zuri-team {
-    text-align: center;
-    margin-top: 80px;
-    font-size: 56px;
-    font-weight: 600;
-    color: #00bbf9;
+    box-shadow: none;
   }
-  footer {
-    background-color: #005e7d;
+  #grid-item input {
+    width: 420px;
   }
-  
-  footer a:hover {
-    color: hsl(180, 66%, 49%);
+}
+@media screen and (max-width: 1020px) {
+  .design {
+    width: 100%;
   }
-  
-  .footer_nav {
-    color: white;
-    display: flex;
-    flex-direction: column;
+  .questions {
+    width: 70%;
+    margin-left: 15%;
   }
-  
-  .footer_nav section {
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem 0;
+  .questions .drops {
+    width: 700px;
   }
-  
-  .footer_nav h4 {
-    font-size: 0.85rem;
+  .help {
+    width: 100%;
   }
-  
-  .footer_nav a {
-    color: hsl(0, 0%, 75%);
-    font-size: 0.75rem;
-    text-decoration: none;
-  }
-  
-  .socials a {
-    color: white;
-    font-size: 1.35rem;
-    margin: 0 0.25rem;
-  }
-  .fq-cp{
-    display: flex;
-    flex-direction: row;
-  }
-  .fq-cp p {
-    padding: 0 5px;
-     
+  .grid-container {
+    width: 100%;
     margin-top: 50px;
-    align-self: center;
-    padding-bottom: 40px;
-    font-size: 16px;
-  }
-  .fq-copyright {
-    display: flex;
-    justify-content: space-between;
-    float: right;
-    margin-top: 100px;
-    color: white;
-    font-size: 12px;
-    padding-right: 70px;
-     
-  }
-  .fq-copyright .fq-icon {
-    width: 20px;
-    height: 20px;
-    align-self: center;
-    margin-top: 10px;
-  }
-    
-  /* ###---FOOTER END---### */
-  
-  /* ###---RESPONSIVE STYLING FOR HEADER AND FOOTER START---### */
-  @media screen and (max-width: 1440px) {
-    .design{
-        width: 100%;
-    }
-     
-    .questions{
-        width: 100%;
-    }
-    .help{
-        width: 100%;
-    }
-    .grid-container{
-        width: 100%;
-        grid-template-columns:400px 400px;
-    }
-    #grid-item{
-      width: auto;
-      background-color: white;
-      border: none;
-      box-shadow:none;
-   }
-    #grid-item input{
-      width: 420px;
-    }
-    
-    
-  }
-  @media screen and (max-width: 1020px){
-    .design{
-        width: 100%;
-    }
-    .questions{
-        width: 70%;
-        margin-left: 15%;
-    }
-    .questions .drops{
-      width: 700px;
-    }
-    .help{
-        width: 100%;
-    }
-    .grid-container{
-        width: 100%;
-        margin-top: 50px;
-        display: grid;
-        grid-template-columns:350px 350px;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: auto;
-        column-gap: 60px;
-        row-gap: 40px;
-    }
-   
-    #grid-item input{
-        width: 350px;
-    }
-    .grid-container button{
-        margin-left: 80px;
-    }
-    .flex{
-        width: auto;
-    }
-  }
-  @media screen and (max-width: 768px){
-    .design{
-        width: 100%;
-        height: 300px;
-    }
-    .design h1{
-        width: 100%;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 30px;
-        color: white;
-
-    }
-    .design input{
-        width: 400px;
-        height: 40px;
-        top: 50%;
-        left: 50%;
-        
-    }
-    .questions{
-      
-        width: 70%;
-    }
-    .questions .drops{
-        text-align: start;
-        width:400px;
-        font-size: 15px;
-        
-    }
-    .help{
-        width: 100%;
-    }
-    
-    .search{
-      width: 100%;
-      height: 20px;
-    }
-    .search input{
-      width: 400px;
-    }
-    .grid-container{
-        width: 100%;
-        margin-top: 50px;
-        display: grid;
-        grid-template-columns:523px;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: auto;
-        column-gap: 60px;
-        row-gap: 40px;
-    }
-    .grid-item{
-      margin-left: 15%;
-      margin-top: 30px;
-    }
-    #grid-item1{order: 1;}
-    #grid-item2{order: 2;}
-    #grid-item4{order: 3;}
-    #grid-item { order: 4; }
-    #form3 {order: 5;}
-    #grid-item input{
-        width: 400px;
-    }
-    .grid-container button{
-        margin-left: 30px;
-    }
-    .zuri-team{
-      font-size: 35px;
-      padding-bottom: 20px;
-    }
-    .footer-logo{
-      color: white;
-    }
-  }
-  @media screen and (max-width: 470px){
-    .design{
-        width: 100%;
-        background-size: contain;
-        height: 200px;
-    }
-    .design h1{
-        width: 100%;
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 20px;
-        color: white;
-
-    }
-    .design input{
-        width: 250px;
-        height: 40px;
-        top: 40%;
-        left: 50%;
-    }
-    .search input{
-        width: 50%;
-         
-    }
-    .illustrate img{
-      width: 90%;
-      margin-right: 30px;
-    }
-    .questions{
-      
-        width: 80%;
-        margin-left: 12%;
-    }
-    .questions .drops{
-        text-align: start;
-        width:300px;
-        font-size: 15px;
-    }
-    .help{
-        width: 100%;
-        height: 50px;
-        font-size: 20px;
-        padding: 0;
-    }
-    .search{
-      width: 100%;
-      height: 20px;
-    }
-    .illustrate{
-      width: 80%;
-      margin-left: 50px;
-    }
-    .grid-container{
-        width: 100%;
-        margin-top: 70px;
-        display: grid;
-        grid-template-columns:300px;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: auto;
-        column-gap: 60px;
-        row-gap: 40px;
-    }
-     
-     .grid-item{
-      width: 90%;
-      font-size: 20px;
-      margin-left: 5%;
-     }
-    #grid-item1{order: 1;}
-    #grid-item2{order: 2;}
-    #grid-item4{order: 3;}
-    #grid-item { order: 4; }
-    #form3 {order: 5;}
-    #grid-item input{
-        width: 300px;
-    }
-    #form3 button{
-        margin-left: 25px;
-        height: 40px;
-    }
-    .zuri-team{
-      font-size: 30px;
-      padding-bottom: 40px;
-    }
-    .footer-logo{
-      color: white;
-    }
-  }
-
-
-  
-  /* ---Tablets--- */
-  @media screen and (min-width: 780px) {
-    body {
-      padding: 0 ;
-    }
-  
-    header .menu_btn {
-      display: none;
-    }
-  
-    header .company-logo {
-      font-size: 1.1rem;
-      font-family: "open sans" sans-serif;
-      min-width: 6.5rem;
-      margin: 0;
-    }
-  
-    header a,
-    header button {
-      border-radius: 7px;
-      cursor: pointer;
-      font-size: 0.7rem;
-    }
-  
-    .search-bar {
-      display: none;
-    }
-  
-    header button {
-      border: 1px solid #00bbf9;
-      background-color: transparent;
-      color: #00bbf9;
-    }
-  
-    header button:hover {
-      color: white;
-    }
-  
-    .search-icon {
-      cursor: pointer;
-      display: block;
-      font-size: 0.8rem;
-      position: absolute;
-      right: 0.5rem;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  
-    .desktop_nav div {
-      display: flex;
-      align-items: center;
-      width: 28%;
-      height: 1.5rem;
-      position: relative;
-    }
-  
-    .desktop_nav input {
-      width: 100%;
-      height: 100%;
-    }
-  
-    .desktop_nav {
-      display: flex;
-      align-items: right;
-      margin-left: 30rem;
-       
-    }
-  
-    footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: left;
-      font-family: "open sans" sans-serif;
-      padding-top: 2rem;
-    }
-    .footer-logo {
-      color: white;
-    }
-    .footer_nav {
-      flex-direction: row;
-      justify-content: space-between;
-      width: 100%;
-       
-    }
-  
-    .footer_nav h4 {
-      font-size:20px;
-      margin: 0;
-    }
-  }
-  
-  /* ---Desktops--- */
-  @media screen and (min-width: 1020px) {
-    body {
-      padding: 0;
-    }
-  
-    header a {
-      font-size:20px;
-      /* padding: .45rem .75rem; */
-    }
-  
-    footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: left;
-      margin-top: 40px;
-    }
-  
-    footer {
-      flex-direction: row;
-      align-items: flex-start;
-      justify-content: space-around;
-    }
-  
-    .footer_nav {
-      margin: 0;
-      width: 55%;
-    }
-  }
-  
-  /* ###---RESPONSIVE STYLING END---### */
-  
-  .drops {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 350px 350px;
     align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    column-gap: 60px;
+    row-gap: 40px;
+  }
+
+  #grid-item input {
+    width: 350px;
+  }
+  .grid-container button {
+    margin-left: 80px;
+  }
+  .flex {
+    width: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .design {
+    width: 100%;
+    height: 300px;
+  }
+  .design h1 {
+    width: 100%;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    color: white;
+  }
+  .design input {
+    width: 400px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+  }
+  .questions {
+    width: 70%;
+  }
+  .questions .drops {
+    text-align: start;
+    width: 400px;
+    font-size: 15px;
+  }
+  .help {
+    width: 100%;
+  }
+
+  .search {
+    width: 100%;
+    height: 20px;
+    margin-right: 50%;
+  }
+  .search input {
+    width: 350px;
+    
+   
+  }
+  .search button{
+     
+     width: 100px;
+  }
+  .grid-container {
+    width: 100%;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 523px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    column-gap: 60px;
+    row-gap: 40px;
+  }
+  .grid-item {
+    margin-left: 15%;
+    margin-top: 30px;
+  }
+  #grid-item1 {
+    order: 1;
+  }
+  #grid-item2 {
+    order: 2;
+  }
+  #grid-item4 {
+    order: 3;
+  }
+  #grid-item {
+    order: 4;
+  }
+  #form3 {
+    order: 5;
+    
+  }
+  #grid-item input {
+    width: 400px;
   }
   
+  .zuri-team {
+    font-size: 35px;
+    padding-bottom: 20px;
+  }
+   
+}
+@media screen and (max-width: 470px) {
+  .design {
+    width: 100%;
+    background-size: contain;
+    height: 200px;
+  }
+  .design h1 {
+    width: 100%;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: white;
+  }
+  .design input {
+    width: 250px;
+    height: 40px;
+    top: 35%;
+    left: 50%;
+  }
+  .search input {
+    width: 50%;
+  }
+  .illustrate img {
+    width: 90%;
+    margin-right: 30px;
+  }
+  .questions {
+    width: 80%;
+    margin-left: 12%;
+  }
+  .questions .drops {
+    text-align: start;
+    width: 280px;
+    font-size: 15px;
+  }
+  .help {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    padding: 0;
+  }
+  .search {
+    width: 100%;
+    height: 20px;
+    margin-left: 50px;
+  }
+  .search input{
+    width: 200px;
+    height: 30px;
+  }
+  .search button{
+    width: 70px;
+    height: 30px;
+  }
+  .illustrate {
+    width: 80%;
+    margin-left: 50px;
+  }
+  .grid-container {
+    width: 100%;
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: 300px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    column-gap: 60px;
+    row-gap: 40px;
+  }
+
+  .grid-item {
+    width: 90%;
+    height: 100%;
+    font-size: 20px;
+    margin-left: 5%;
+  }
+  #grid-item1 {
+    order: 1;
+  }
+  #grid-item2 {
+    order: 2;
+  }
+  #grid-item4 {
+    order: 3;
+  }
+  #grid-item {
+    order: 4;
+  }
+  #form3 {
+    order: 5;
+  }
+  #grid-item input {
+    border: 1px solid;
+    width: 300px;
+  }
+  #form3 button {
+    margin-left: 100px;
+    height: 40px;
+  }
+  .zuri-team {
+    font-size: 30px;
+    padding-bottom: 40px;
+  }
+  .footer-logo {
+    color: white;
+  }
+}
+ 
+.drops {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
