--- a/frontend/css/landing.css
+++ b/frontend/css/landing.css
@@ -1,4 +1,4 @@
-body {
+.lpbody {
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     padding: 0 1.25rem;
@@ -8,149 +8,14 @@ body {
 
 /* ###---HEADER START---### */
 
-header {
-    align-items: center;
-    border-bottom: 1px solid gray;
-    padding: 1.25rem 0;
-}
 
-header,
-.desktop_nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-header .company-logo {
-    font-size: 1.25rem;
-    letter-spacing: .05rem;
-    text-align: left;
-}
-
-header a,
-header button {
-    border: none;
-    /* background-color: #557E8C; */
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    font-weight: 600;
-
-    height: 2rem;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-}
-
-header a:hover {
-    border-radius: 0;
-    border-bottom: 2px solid #003E53;
-}
-
-
-header .signup-btn {
-    background-color: #00BBF9;
-    border: none;
-    color: white;
-}
-
-header button:hover {
-    background-color: #003E53;
-}
-
-header input {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 0 .5rem;
-}
-
-header input:focus {
-    outline: none;
-}
-
-.mob_search-bar {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 50%;
-}
-
-.search-icon {
-    font-size: .8rem;
-    position: absolute;
-    top: 55%;
-    transform: translateY(-50%);
-    left: .5rem;
-}
-
-.mob_search-bar input {
-    width: 100%;
-    height: 1.75rem;
-    padding: 0 1.75rem;
-}
-
-.company-logo {
-    color: #00BBF9;
-    font-size: 1.75rem;
-    font-weight: 600;
-    letter-spacing: .2rem;
-}
-
-.desktop_nav {
-    display: none;
-}
-
-.mobile_nav {
-    display: flex;
-}
-
-.nav_card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-    background-color: #003E53;
-    border-radius: 10px;
-    height: 60vh;
-    padding: 2rem 1.5rem;
-    width: 80vw;
-
-    position: absolute;
-    top: 4.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: .7s ease-out;
-    z-index: 3;
-}
-
-.nav_card a,
-.nav_card button {
-    background-color: transparent;
-    color: white;
-}
-
-.nav_card.hide {
-    left: -100vw;
-}
-
-.menu_btn {
-    cursor: pointer;
-    font-size: 1.25rem;
-}
-
-.menu_btn:hover {
-    color: #003E53;
-}
 
 /* ###---HEADER END---### */
 
 /* ###--- MAIN START---### */
 
 
-main {
+.lpmiddle {
     margin: 0 -1.25rem;
     padding: 1rem 1.25rem;
 }
@@ -164,23 +29,6 @@ main {
     /* margin-top: 2rem; */
     padding: 0.1rem 0.1rem 1.5rem;
 }
-
-/* .button{
-        padding: 0.3rem 1rem;
-    border-radius: var(--input-border-radius);
-    background-color: none;
-    color: #eee;
-    border: none;
-    cursor: pointer;
-    } */
-
-/* .lpmiddleb {
-        border-left: 29rem solid #CCF1FE;
-        border-right: 29rem solid #CCF1FE;
-        border-top: 5rem solid #CCF1FE;
-        border-bottom: 4rem solid white;
-        border-radius: 0 0 16px 16px;
-    } */
 
 .lpmiddle1a {
     display: flex;
@@ -300,17 +148,6 @@ main {
     left: -30px;
 }
 
-
-
-/*  .lpmiddlec {
-        border-left: 580px solid #CCF1FE;
-        border-right: 600px solid #CCF1FE;
-        border-bottom: 50px solid #CCF1FE;
-        border-top: 50px solid white;
-        border-radius: 16px 16px 0 0; 
-
-    } */
-
 .lpmiddle3 {
     display: flex;
     flex-direction: column;
@@ -364,7 +201,6 @@ main {
 .lpmiddle4bi {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     place-items: center;
 }
 
@@ -483,45 +319,7 @@ img {
 
 /* ###---FOOTER START---### */
 
-footer {
-    background-color: #005e7d;
-    margin: 0 -1.25rem;
-    padding: 1.25rem 0;
-}
 
-footer a:hover {
-    color: hsl(180, 66%, 49%);
-}
-
-.footer_nav {
-    color: white;
-    display: flex;
-    flex-direction: column;
-}
-
-.footer_nav section {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem 0;
-}
-
-.footer_nav h4 {
-    font-size: .85rem;
-    margin: .5rem 0;
-}
-
-.footer_nav a {
-    color: hsl(0, 0%, 75%);
-    font-size: .75rem;
-    margin: .25rem 0;
-    text-decoration: none;
-}
-
-.socials a {
-    color: white;
-    font-size: 1.35rem;
-    margin: 0 .25rem;
-}
 
 /* ###---FOOTER END---### */
 
@@ -530,90 +328,16 @@ footer a:hover {
 /* ---Tablets--- */
 @media screen and (min-width: 820px) {
 
-    body {
+    .lpbody {
         padding: 0 4rem;
     }
 
-    header {
-        margin: 0 -4rem;
-        padding: 1.5rem 4rem;
-    }
+   
 
-    header .menu_btn {
-        display: none;
-    }
-
-    header .company-logo {
-        font-size: 1.1rem;
-        min-width: 6.5rem;
-        margin: 0;
-    }
-
-    header a,
-    header button {
-        border-radius: 7px;
-        cursor: pointer;
-        font-size: .8rem;
-        font-weight: 500;
-        padding: 0 .8rem;
-        margin: 0 .25rem;
-    }
-
-    .mob_search-bar {
-        display: none;
-    }
-
-    header button {
-        border: 1px solid #00BBF9;
-        background-color: transparent;
-        color: #00BBF9;
-        min-width: 4.75rem;
-    }
-
-    header button:hover {
-        border: 1px solid #003E53;
-        color: white;
-    }
-
-    .desktop_nav {
-        display: flex;
-        align-items: center;
-        width: 87.5%;
-    }
-
-    .search-icon {
-        cursor: pointer;
-        display: block;
-        font-size: .8rem;
-
-        position: absolute;
-        left: .5rem;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .desktop_nav .search-bar {
-        display: flex;
-        align-items: center;
-        position: relative;
-        height: 2rem;
-        margin: 0 .25rem;
-        width: 45%;
-    }
-
-    .desktop_nav input {
-        padding: 0 1.5rem;
-        width: 100%;
-        height: 100%;
-    }
-
-    main {
+    .lpmiddle {
         margin: 0 -4rem;
         padding: 2.5rem 4rem;
     }
-
-
-
 
     .lpmiddle2 {
         display: flex;
@@ -626,17 +350,6 @@ footer a:hover {
         position: relative;
     }
     
-    /* .lpmiddle2a {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .lpmiddle2b{
-        position: relative;
-        padding-left: 10rem;
-    }
-     */
     #lpimage5,
     #lpimage4 {
         max-width: 300px;
@@ -646,46 +359,15 @@ footer a:hover {
     #lpimage5 {
         z-index: -1;
     }
-
-
-
-    footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0 -4rem;
-        padding: 1.5rem 4rem;
-        text-align: left;
-    }
-
-    .footer_nav {
-        flex-direction: row;
-        justify-content: space-between;
-        margin: 1.25rem 0;
-        width: 100%;
-    }
-
-    .footer_nav h4 {
-        font-size: .85rem;
-        margin: 0;
-        margin-top: -0.35rem;
-        margin-bottom: .5rem;
-    }
 }
 
 /* ---Desktops--- */
 @media screen and (min-width: 1020px) {
 
-    body {
+    .lpbody {
         padding: 0 6.5rem;
         width: 100vw;
     }
-
-    header {
-        margin: 0 -6.5rem;
-        padding: 2rem 6.5rem;
-    }
-
 
     .lpbutton1 {
         width: 40%;
@@ -696,7 +378,6 @@ footer a:hover {
         align-items: center;
         padding: 16px;
         color: #FFFDFD;
-        /* font-family: 'Open Sans'; */
         font-style: normal;
         font-weight: 700;
         font-size: 20px;
@@ -740,15 +421,6 @@ footer a:hover {
         border-radius: 16px 16px 0 0;
     }
 
-    /* .lpmiddleb {
-        border-left: 29rem solid #CCF1FE;
-        border-right: 29rem solid #CCF1FE;
-        border-top: 5rem solid #CCF1FE;
-        border-bottom: 4rem solid white;
-        border-radius: 0 0 16px 16px;
-    } */
-
-
     .lpmiddle1a {
         display: flex;
         flex-direction: row;
@@ -782,7 +454,6 @@ footer a:hover {
         justify-content: space-evenly;
         place-items: center;
     }
-
 
     .lplink1 {
         text-align: right;
@@ -870,15 +541,6 @@ footer a:hover {
     #lpimage3 {
         max-width: 50px;
     }
-
-
-    /* .lpmiddlec {
-        border-left: 25rem solid #CCF1FE;
-        border-right: 25rem solid #CCF1FE;
-        border-bottom: 50px solid #CCF1FE;
-        border-top: 50px solid white;
-        border-radius: 16px 16px 0 0;
-    } */
 
     .lpmiddle3 {
         display: flex;
@@ -1077,38 +739,8 @@ footer a:hover {
         margin-top: 50px;
     }
 
-
-    header a,
-    header button {
-        font-size: 1.1rem;
-    }
-
-    header button {
-        min-width: 6rem;
-    }
-
     .lpmiddle {
         padding: 4rem 4rem 4rem 4rem;
-    }
-
-    footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0 -6.5rem;
-        padding: 1.5rem 6.5rem;
-        text-align: left;
-    }
-
-    footer {
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-    }
-
-    .footer_nav {
-        margin: 0;
-        width: 55%;
     }
 }
 
