--- a/backend/account/templates/password_reset_complete.html
+++ b/backend/account/templates/password_reset_complete.html
@@ -1,15 +1,43 @@
-{% extends "base.html" %}
 
-{% block content %} 
-  
 
-<center>
-  
-	    <h2 class="font-weight-bold mt-3">Password reset complete</h2>
-		<hr>
-        <p>Your password has been set. You may go ahead and log in now.</p>                 
-        <a href="{% url 'login' %}" class="btn btn-primary">Log in</a>
+{% load crispy_forms_tags %}  
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Password Changed Succesfully</title>
+</head>
+<body>
+<style>
+    input{
+        border: grey solid 2px;
+        border-radius: 10px;
+        padding: 7px 20px;
+        margin-bottom: 20px;
+        outline: none;
+    }
+</style>
+    <div class="header" style="background-color:#00BBF9 ; color: white; padding: 25px 0px; font-size: 25px; font-weight: bold;">
+       <a href="{% url 'home' %}" style="color: white; text-decoration:none;" > <h3>AUTH WIKI</h3></a>
+    </div>
+
+    <center>
+    <div class="main" style="padding-top: 200px;">
+        <div class="text">
+            <h2 class="font-weight-bold mt-3">Password reset complete</h2>
+            <hr>
+            <p>Your password has been set. You may now log in with your new password.</p>  
+            <a href="{% url 'login' %}"><button class="btn btn-primary" type="submit">Login</button> </a>   
+ </div>
+    
+    </div>
 </center>
-
-{% endblock %}
+   
+</body>
+</html>
