--- a/backend/account/templates/password_reset_confirm.html
+++ b/backend/account/templates/password_reset_confirm.html
@@ -1,22 +1,48 @@
-{% extends "base.html" %}
 
-{% block content %}
+{% load static %}
+{% load crispy_forms_tags %}  
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-  {% load crispy_forms_tags %}  
-  
 
-	  <center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Confirm Your Password Reset</title>
+</head>
+<body>
+<style>
+    input{
+        border: grey solid 2px;
+        border-radius: 10px;
+        padding: 5px 20px;
+        margin-bottom: 0px;
+        outline: none;
+    }
+    li{
+       list-style-type: none;
+    }
+</style>
+    <div class="header" style="background-color:#00BBF9 ; color: white; padding: 25px 0px; font-size: 25px; font-weight: bold;">
+       <a href="{% url 'home' %}" style="color: white; text-decoration:none;" > <h3>AUTH WIKI</h3></a>
+    </div>
 
-        <h2 class="font-weight-bold mt-3">Password Reset Confirm</h2>
-		<hr>
-        <p>Please enter your new password.</p>
+    <center>
+    <div class="main" style="padding-top: 100px;">
+        <div class="text">
+<p>Please enter your new password.</p>       
+ </div>
         <form method="POST">
             {% csrf_token %}
+            
             {{ form|crispy }}                    
-            <button class="btn btn-primary" type="submit">Reset password</button>
-        </form>
-
-      </center>
-
-
-{% endblock %}
+            <button class="btn btn-primary" type="submit" style="margin-top: 20px;">Confirm Password</button>
+        </form> 
+    </div>
+</center>
+   
+</body>
+</html>
