--- a/backend/account/templates/reset_password.html
+++ b/backend/account/templates/reset_password.html
@@ -1,28 +1,52 @@
-{% extends 'base.html' %}
+
+{% load static %}
+{% load crispy_forms_tags %}  
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
 
-     
-{% block content %}
-<center style="margin-top: 100px;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reset Password</title>
+</head>
+<body>
+<style>
+    input{
+        border: grey solid 2px;
+        border-radius: 10px;
+        padding: 7px 20px;
+        margin-bottom: 20px;
+        outline: none;
+    }
+</style>
+    <div class="header" style="background-color:#00BBF9 ; color: white; padding: 25px 0px; font-size: 25px; font-weight: bold;">
+       <a href="{% url 'home' %}" style="color: white; text-decoration:none;" > <h3>AUTH WIKI</h3></a>
+    </div>
 
- 
-    {% load crispy_forms_tags %}          
-
-	<!--Reset Password-->
-
-  	 	<h2>Reset Password</h2>
-		<hr>
-		<p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+    <center>
+    <div class="main" style="padding-top: 200px;">
+        <div class="text">
+            <p>Forgotten your password? Enter the email adressed used to register this account, and we'll email instructions for setting a new one.</p>
+        </div>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}                    
             <button class="btn btn-primary" type="submit">Send email</button>
-        </form>
-  	</div> 
-    </form>
-
-
- </center>
-
+        </form> 
+    </div>
 </center>
-{% endblock %}
+   
+</body>
+</html>
+
+
+
+
+
+
+
+
