--- a/backend/static/css/library_detail.css
+++ b/backend/static/css/library_detail.css
@@ -1,6 +1,9 @@
 .library_detail_wrapper{
   background-color: #003E53;
   height: auto;
+margin-bottom: 200px;
+padding-bottom: 100px;
+padding-top: 50px;
 }
 
 .library_detail_title{
@@ -13,6 +16,7 @@
 }
 
 .library_informations{
+  text-align: start;
   display: grid;
 }
 
@@ -24,6 +28,7 @@ margin-top: 40px;
 }
 
 .code_sample{
+
 width: 80%;
 justify-self: center;
 margin-top: 40px;
@@ -53,18 +58,26 @@ margin-top: 40px;
   outline: none;
   border: none;
   margin-right: 20px;
+  box-shadow: 3px 2px 2px grey;
 
 }
 .commenter{
   padding: 15px 70px;
+  justify-content: center;
+  display: block;
+overflow:auto;
+
+  max-height: 250px;
   -moz-box-shadow:    inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow:inset 0 0 10px #000000;
   border-radius: 20px;
   background-color: #3333;
 }
+
 .comment_section{
   width: 50%;
+  display: grid;
 justify-self: center;
 margin-top: 40px;
   color: white;
@@ -88,11 +101,11 @@ font-size: 15px;
 padding: 12px 8px;
 }
 
-.comment_section h5{
+.comment_section p{
   font-family: 'Open Sans', sans-serif;
   text-transform: capitalize;
-font-size: 15px;
-font-weight: bold;
+font-size: 16px;
+
 
 }
 
@@ -121,15 +134,8 @@ font-family: 'Open Sans', sans-serif;
   display: grid;
   grid-template-columns: 1fr;
 }
-.form  input{
- 
- 
-  border: 1px grey solid;
-  outline: none;
-}
-.form p{
-border-radius: 20px;
-}
+
+
 
 #like_section{
   width: 50%;
@@ -140,12 +146,12 @@ font-weight: bold;
 margin: 0;
 position: relative;
 }
+
 #like_section form{
   position: absolute;
   bottom: 40px;
   right: 0;
 }
-
 
     pre {
     
@@ -165,6 +171,7 @@ position: relative;
   border:ridge 1px #7b7b7c;
   border-radius:5px;
   text-shadow:#c4c4c4 0 0 2px;
+  cursor: pointer;
 box-shadow: 3px 3px 3px rgba(128, 128, 128, 0.521);
 }
 ::-webkit-scrollbar {
@@ -180,10 +187,9 @@ box-shadow: 3px 3px 3px rgba(128, 128, 128, 0.521);
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
+  height: 10px;
 }
-::-webkit-scrollbar-track{
-  width: 10px;
-}
+
 
 
 
