--- a/nodejs-backend/views/partials/header.ejs
+++ b/nodejs-backend/views/partials/header.ejs
@@ -1,24 +1,24 @@
 <header>
   <h2 class="company-logo"><a href="/">AUTH_WIKI</a></h2>
   <nav class="desktop_nav">
-      <a href="">About</a>
-      <a href="./product-page.html">Products</a>
+      <a href="/about">About</a>
+      <a href="/products">Products</a>
 
-      <a href="">Documentation</a>
+      <a href="/documentation">Documentation</a>
       <div class="search-bar">
           <input type="text" placeholder="Search">
           <i class="fa-solid fa-magnifying-glass search-icon"></i>
       </div>
-      <a class="btn-link" href=""><button class="login-btn">Login</button></a>
-      <a class="btn-link" href="../signup/signup.html"><button class="signup-btn">Sign Up</button></a>
+      <a class="btn-link" href="/login"><button class="login-btn">Login</button></a>
+      <a class="btn-link" href="/signup"><button class="signup-btn">Sign Up</button></a>
   </nav>
   <div class="mobile_nav">
       <nav class="nav_card hide">
-          <a href="">About</a>
-          <a href="./product-page.html">Products</a>
-          <a href="">Documentation</a>
-          <a href=""><button class="login-btn">Login</button></a>
-          <a href="../signup/signup.html">Sign Up</a>
+          <a href="/about">About</a>
+          <a href="/product">Products</a>
+          <a href="/documentation">Documentation</a>
+          <a href="/login"><button class="login-btn">Login</button></a>
+          <a href="/signup">Sign Up</a>
 
       </nav>
       <i class="menu_btn fa-solid fa-bars"></i>
