--- a/nodejs-backend/public/css/landing.css
+++ b/nodejs-backend/public/css/landing.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   background-color: #ccf1fe;
   border-radius: 8px;
   /* margin-top: 2rem; */
@@ -173,6 +174,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   gap: 2rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
